refactor/swaggerによるbackendリファクタリング（LayoutComponentモデル）
